Added TODO Debug fieldset responsive view in native browser

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="viewContent">
             <h1>Création de post-it</h1>
             <h2>Remplissez les champs ci-dessous</h2>
+            <!-- TODO: Debug fieldset responsive view in native browser -->
             <fieldset>
                 <legend>
                     <b>Type de post-it</b></legend>
