--- a/index.html
+++ b/index.html
@@ -24,14 +24,21 @@
         <div class="viewContent">
             <h1>Création de post-it</h1>
             <h2>Remplissez les champs ci-dessous</h2>
+
             <form action="https://ihome.ust.hk/~rossiter/cgi-bin/show_everything.php" method="get">
+                <fieldset>
+                    <legend>
+                        <b>Tâche</b></legend>
+                    <p>De quoi parle cette carte :</p>
+                    <input type="text" name="description" placeholder="Description de la tâche">
+                </fieldset>
                 <fieldset>
                     <legend>
                         <b>Type de post-it</b></legend>
                     <p>De quel type de carte s'agit-il :</p>
-                    <input class="radioBtn" type="radio" name="type" value="task"> Tâche
+                    <input type="radio" name="type" value="task"> Tâche
                     <br>
-                    <input class="radioBtn" type="radio" name="type" value="userStory"> User Story or Raw Item
+                    <input type="radio" name="type" value="userStory"> User Story or Raw Item
                 </fieldset>
                 <fieldset>
                     <legend>
@@ -56,6 +63,12 @@
                         <option value="infinity">&infin;</option>
                         <option value="unknown">?</option>
                     </select>
+                </fieldset>
+                <fieldset>
+                    <legend>
+                        <b>Deadline</b></legend>
+                    <p>Quelle est la date buttoire :</p>
+                    <input type="date" name="deadline">
                 </fieldset>
                 <fieldset>
                     <legend>
