--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <fieldset>
                     <legend>
                         <b>Points valeurs</b></legend>
-                    <select>
+                    <select name="pokerValue">
                         <option value="0">0</option>
                         <option value="0.5">0.5</option>
                         <option value="1">1</option>
