Added selected mark in option unknown by select field

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <legend>
                         <b>Carte additionnelle</b></legend>
                     <p>S'agit-il d'une tâche additionnelle à l'actuel Sprint :</p>
-                    <input type="checkbox" name="add" value="addTrue"> Oui
+                    <input type="checkbox" name="add" value="addTrue"> (+) Oui
                 </fieldset>
                 <fieldset>
                     <legend>
@@ -64,7 +64,7 @@
                         <option value="20">20</option>
                         <option value="40">40</option>
                         <option value="infinity">&infin;</option>
-                        <option value="unknown">?</option>
+                        <option value="unknown" selected>?</option>
                     </select>
                 </fieldset>
                 <fieldset>
